--- a/app/views/welcome/random.html.erb
+++ b/app/views/welcome/random.html.erb
@@ -1,15 +1,11 @@
 <h1>Dado Inicial</h1>
-  <p><%= @dadosView[:dadoInicial][:inicial] %> - Total: <%= @dadosView[:dadoInicial][:total] %></p>
+  <p><%= iteracao[:dadoInicial][:inicial] %> - Total: <%= iteracao[:dadoInicial][:total] %></p>
 
 <h2>Vizinhos</h2>
-  <% melhorVizinho = @dadosView[:dadosVizinhos].first %>
-  <% @dadosView[:dadosVizinhos].each do |vizinho| %>
-    <% if vizinho[:total] > melhorVizinho [:total] %>
-      <% melhorVizinho =  vizinho %>
-    <% end %>
+  <% iteracao[:dadosVizinhos].each do |vizinho| %>
     <%= vizinho[:vizinho] %> - <strong>Total:</strong> <%= vizinho[:total] %>
     <br />
   <% end %>
 
 <h2>Melhor Vizinho</h2>
-  <%= melhorVizinho[:vizinho] %> - <strong>Total:</strong> <%= melhorVizinho[:total] %>
+  <%= iteracao[:melhorVizinho] %> - <strong>Total:</strong> <%= iteracao[:melhorVizinho] %>
