--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Welcome#index</h1>
-<%= @totais.round(5) %>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<%= @dados.count %>
+<br />
+<% @dados.each do |vizinho| %>
+  <%= vizinho %>
+  <br />
+<% end %>
