--- a/app/views/welcome/random.html.erb
+++ b/app/views/welcome/random.html.erb
@@ -1,11 +1,17 @@
-<h1>Dado Inicial</h1>
-  <p><%= iteracao[:dadoInicial][:inicial] %> - Total: <%= iteracao[:dadoInicial][:total] %></p>
+<% contador = 1 %>
+<% @dadosView[:dados].each do |iteracao| %>
+  <h1><%= contador %></h1>
+  <% contador += 1 %>
 
-<h2>Vizinhos</h2>
-  <% iteracao[:dadosVizinhos].each do |vizinho| %>
-    <%= vizinho[:vizinho] %> - <strong>Total:</strong> <%= vizinho[:total] %>
-    <br />
-  <% end %>
+  <h2>Dado Inicial </h2>
+    <p><%= iteracao[:dadoInicial][:inicial] %> - Total: <%= iteracao[:dadoInicial][:total] %></p>
 
-<h2>Melhor Vizinho</h2>
-  <%= iteracao[:melhorVizinho] %> - <strong>Total:</strong> <%= iteracao[:melhorVizinho] %>
+  <h2>Vizinhos</h2>
+    <% iteracao[:dadosVizinhos].each do |vizinho| %>
+      <%= vizinho[:vizinho] %> - <strong>Total:</strong> <%= vizinho[:total] %>
+      <br />
+    <% end %>
+
+  <h2>Melhor Vizinho</h2>
+    <%= iteracao[:melhorVizinho][:vizinho] %> - <strong>Total:</strong> <%= iteracao[:melhorVizinho][:total] %>
+<% end %>
